@@ -1,5 +1,6 @@
 ---
 
+* [Bug 1411] Fix status messages in refclock_oncore.c.
 * [Bug 1419] ntpdate, ntpdc, sntp, ntpd ignore configure --bindir.
 * [Bug 1426] scripts/VersionName needs . on the search path.
 * [Bug 1427] quote missing in ./build - shows up on NetBSD.
